<resources>
    <string name="app_name">Add Meal</string>
    <string name="et_id">ID</string>
    <string name="et_name">Meal Name</string>
    <string name="et_mName1">Modle Name</string>
    <string name="et_mName2">Brand Name</string>
    <string name="breakfast">Breakfast</string>
    <string name="et_mName3">Processor</string>
    <string name="et_mName4">Price</string>
    <string name="lunch">Lunch</string>

    <string name="et_up_mName1">Modle Name</string>
    <string name="et_up_mName2">Brand Name</string>
    <string name="et_up_mName3">Processor</string>
    <string name="et_up_mName4">Price</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>

    <string name="Dinner">Dinner</string>
    <string name="add">SAVE</string>
    <string name="view">View Item</string>
    <string name="button">Button</string>
    <string name="tv_view1">Meal ID</string>
    <string name="tv_view2">Meal Name</string>
    <string name="tv_view3">Action</string>
    <string name="tv_view4">M01</string>
    <string name="tv_view5">Meal 01</string>
    <string name="tv_viewdelete1">Delete</string>
    <string name="tv_viewupdate1">Update</string>
    <string name="tv_mealid">Meal ID</string>
    <string name="tv_mealname">Meal Name</string>
    <string name="tv_action">Action</string>
    <string name="tv_inmealid">M01</string>
    <string name="tv_inmealname">Meal 01</string>
    <string name="tv_delete">Delete</string>
    <string name="tv_update">Update</string>
    <string name="tv_mc_potasium">Potasium</string>
    <string name="tv_mc_cholesterol">Cholesterol</string>
    <string name="tv_mc_sodium">Sodium</string>
    <string name="tv_mc_protein">Protein</string>
    <string name="tv_mc_fiber">Fiber</string>
    <string name="tv_mc_carbohydrates">Carbohydrates</string>
    <string name="tv_mc_fat">Fat</string>
    <string name="tv_mc_energy">Energy</string>
    <string name="btn_mc_button">Find Macros</string>
    <string name="et_mc_serving">Serving Size in Grams</string>
    <string name="tv_mc_serving">Serving</string>
    <string name="tv_mc_food">Name of the Food</string>
    <string name="et_mc_food">Food</string>
    <string name="btn_amr_button">Add</string>
    <string name="tv_amr_potasium">Potassium</string>
    <string name="tv_amr_sodium">Sodium</string>
    <string name="tv_amr_protein">Protein</string>
    <string name="tv_amr_fiber">Fiber</string>
    <string name="tv_amr_carbohydrates">Carbohydrates</string>
    <string name="tv_amr_fat">Fat</string>
    <string name="tv_amr_energy">Energy</string>
    <string name="tv_amr_foodName">Food Name</string>
    <string name="tv_amr_cholesterol">Cholesterol</string>
    <string name="et_amr_name1" />
    <string name="et_amr_name2" />
    <string name="et_amr_name3" />
    <string name="et_amr_name4" />
    <string name="et_amr_name5" />
    <string name="et_amr_name6" />
    <string name="et_amr_name7" />
    <string name="et_amr_name8" />
    <string name="et_amr_name9" />
    <string name="btn_up_button">Update</string>




    <string name="moneymate">MoneyMate</string>
    <string name="passwordinput">...........</string>
    <string name="sign_in">Sign In</string>
    <string name="example_gmail_com"></string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="select_currency">Select Currency</string>
    <string name="search">search…</string>
    <string name="convert_from">Convert From</string>
    <string name="convert_to">Convert To</string>
    <string name="amount_to_convert">Amount To Convert</string>
    <string name="conversion_rate">Conversion Rate</string>
    <string name="convert">Convert</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_agreed_to_the_terms_and_conditions">I agreed to the Terms and Conditions</string>
    <string name="Tocontinue">Continue</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="User_name">Username</string>
    <string name="MoneyMateLogo">MoneyMateLogo</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_go_to_sign_in">Already have an account? Go to Sign In</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Enter_Username">Enter username</string>
    <string name="password_activity_username">User Name</string>
    <string name="Reset_password">Reset Password</string>
    <string name="Retype_password">Retype password</string>
    <string name="Confirm">Confirm</string>
    <string name="Enter_password">Enter Password</string>
    <string name="ReEnter_password">ReType</string>
    <string name="Hometext">Manage your personal finance and acheive your financial goals</string>
    <string name="Welcome">Welcome</string>
    <string name="Food">Food</string>
    <string name="Transport">Transport</string>
    <string name="Fashion">Fashion</string>
    <string name="Utility">Utility Bill</string>
    <string name="head_1">Budget</string>
    <string name="txt_sub_1">Rs.10000</string>
    <string name="txt_sub_2">$$$$$</string>
    <string name="Amount">Amount</string>
    <string name="Save">Save</string>
    <string name="Add">Add</string>
    <string name="Description">Description</string>
    <string name="Edit">Edit</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>


</resources>