<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="418dp"
        android:layout_height="728dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="1dp"
        android:alpha="0.12"
        android:background="@drawable/forget"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333"

        tools:visibility="visible" />

    <TextView
        android:id="@+id/username_reset_text"
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_background"
        android:hint="@string/Enter_password"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/Enter_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_reset_text" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_background"
        android:hint="@string/Retype_password"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/Retype_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/password_reset"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:foregroundTint="#000000"
        android:background="@drawable/forget"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="#888888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/repassword_reset"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="@string/ReEnter_password"
        android:background="@drawable/forget"
        android:inputType="textPassword"
        android:textColorHint="#888888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/btnconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#3F51B5"
        android:hint="@string/Confirm"
        android:text="@string/Confirm"
        android:background="@drawable/forget"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repassword_reset" />
</androidx.constraintlayout.widget.ConstraintLayout>